--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="app_name">Home</string>
-    <string name="title_section1">Weather</string>
-    <string name="title_section2">Miner</string>
+    <string name="title_section1">Summary</string>
+    <string name="title_section2">Actions</string>
     <string name="title_section3">NetWork</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
