--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,8 @@
         based on your message history
     </string>
 
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
+    <string name="pref_title_display_name">Server IP address</string>
+    <string name="pref_default_display_name">192.168.0.100</string>
 
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
@@ -70,5 +70,15 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="localserverip">192.168.0.104</string>
+    <string name="localserveriptitle">Server local IP</string>
+    <string name="serversettingcategorytitle">Server preferences</string>
+    <string name="serverremoteip">128.3.3.3</string>
+    <string name="serverremoteiptitle">Server remote IP</string>
+    <string name="user">romain</string>
+    <string name="userdefault">romain</string>
+    <string name="usernametitle">Username</string>
+    <string name="passworddefault">azerty</string>
+    <string name="passwordtitle">Password</string>
 
 </resources>
